[gd_scene load_steps=2 format=3 uid="uid://ghkpxhg5ealq"]

[ext_resource type="Script" path="res://mainmenu.gd" id="1_vbp08"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vbp08")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play POC" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play POC"

[node name="Play Demo" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Field"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play POC" to="." method="_on_play_poc_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play POC" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Demo" to="." method="_on_play_demo_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
